# CoWinBot

./: .gitignore  README.md  aesutil.py  bookerTest.py  broadcast.py  build_pincode_dataset.py  chrome_custom.py  customLogging.py  fetcher.py  maps.py  migrate.py  notifier.py  params.py  pincode_data.py  pincode_queue.py  requirements.txt  run.py  run_fetcher.py  telebot.py  util.py
CoWinWorker/: Cargo.toml
CoWinWorker/src/: main.rs
db/: database.py  dbHelper.py  dbUtil.py
index/: pincode_queue.py
rawData/: pincode_dic  pincode_set
