[package]
name = "cowin_worker"
version = "0.1.0"
authors = ["siddhantkushwaha <k16.siddhant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.19"